[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "encounter"
version = "4.20.1"
description = "Interactive command-line tool for managing tabletop combat encounters."
requires-python = ">=3.11"
dependencies = [
    "pyyaml",
]

[tool.setuptools]
package-dir = {"" = "src"}
